--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,6 +8,7 @@ anyhow = "1.0.86"
 csv = "1.3.0"
 dotenv = "0.15.0"
 open = "5.3.0"
+rand = "0.8.5"
 reqwest = { version = "0.12.5", features = ["json"] }
 serde = { version = "1.0.204", features = ["derive"] }
 tiny_http = "0.12.0"
