--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,12 +6,14 @@ edition = "2021"
 [dependencies]
 anyhow = "1.0.86"
 base64 = "0.22.1"
+clap = { version = "4.5.13", features = ["derive"] }
 csv = "1.3.0"
 dotenv = "0.15.0"
 open = "5.3.0"
 rand = "0.8.5"
 reqwest = { version = "0.12.5", features = ["json"] }
 serde = { version = "1.0.204", features = ["derive"] }
+serde_json = "1.0.122"
 tiny_http = "0.12.0"
 tokio = { version = "1.39.2", features = ["full"] }
 url = "2.5.2"
